# deeplearningProjects

./: .gitignore  README.md  classifier-train.py  info.txt  main.py  pyproject.toml  template_creator.py  test_onnx.py  three_parts_opencv_fast.py  three_parts_rotate_match.py
.github/workflows/: smoke.yml
